2012-06-24 Sasa Ostrouska <casaxa@gmail.com>

	* Renamed all calls from database to DataBase.

2012-06-22 Sasa Ostrouska <casaxa@gmail.com>

	* Fixed a typo in class_base.inc 
	* Added some missing code in __call methond to be able to handle well
	set* methods.

2012-06-17 Sasa Ostrouska <casaxa@gmail.com>

	* Renamed class base into Base in class_base.inc
	* Added methods deleteField(), clearFields() and getField() to class
	Base.
	* Added methods filterFields() and createSELECT() to class Base.
	* Added methods list(), fillField() and nextField() to class Base.
	* Updated method __call to be able to filter get and set function
	names.
	* Renamed method datetime() to date_time() to avoid conflicts.
	* Renamed method list() to listStuff().
	* Added in tests a test_psql_class_base.php to test the new Base
	class.
	* Fixed a typo in class field with a missing _ in _fieldref.

2012-06-12 Sasa Ostrouska <casaxa@gmail.com>

	* Added class date and datetime to the class_base.inc.
	* Added methods convertDateToDB(), convertDateTimeToDB(),
	convertDateToHTML() and convertDateTimeToHTML() to the DataBase class 
	in class_database.inc.
	* Added method __call in class field. 
	* Started writing class base in class_base.inc

2012-06-10 Sasa Ostrouska <casaxa@gmail.com>
	
	* Started writing class_base.inc
	* Added class field and string.
	* Added method escapeString in database class.
	* Added classes integer, float and money into class_base.inc

2012-06-07 Sasa Ostrouska <casaxa@gmail.com>

	* Added class tag and class html in class_html.inc
	* Added in tests test_psql_select_using_htmlclass.php, which creates
	dynamically the HTML code for the showed page.
	* Added in tests test_mysql_select_using_htmlclass.php, which creates
	dynamically the HTML code for the showed page.
	* Added html optimization code to the class_html.inc, this will output
	a way more readable code.

2012-06-05 Sasa Ostrouska <casaxa@gmail.com>

	* Added test_psql_transaction_test1.php 