@@ -1,6 +1,7 @@
 2012-06-24 Sasa Ostrouska <casaxa@gmail.com>
 
 	* Renamed all calls from database to DataBase.
+	* Added test_psql_include_registers.php in tests dir.
 
 2012-06-22 Sasa Ostrouska <casaxa@gmail.com>
 
